changed html again

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
 
-HI THERE HELLOW WORLDS uu test again
+HI THERE HELLOW WORLDS uu test again 222
   <script src="js/scripts.js"></script>
 </body>
 </html>
